// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton creates correct snapshot for danger styled button 1`] = `
<WithStyles(Button)
  className="IconButton-buttonDanger-2"
  onClick={[Function]}
  variant="contained"
>
  buttonText
  <WithStyles(Icon)
    className="IconButton-icon-3"
  >
    store
  </WithStyles(Icon)>
</WithStyles(Button)>
`;

exports[`IconButton creates correct snapshot for required props 1`] = `
<WithStyles(Button)
  className="IconButton-button-1"
  color="accent"
  onClick={[Function]}
  variant="contained"
>
  buttonText
  <WithStyles(Icon)
    className="IconButton-icon-3"
  >
    store
  </WithStyles(Icon)>
</WithStyles(Button)>
`;
